# docpistemic

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
.empirica/: config.yaml  project.yaml
.empirica/cache/: tree_docpistemic_3.txt
.empirica/sessions/: sessions.db
docpistemic/: __init__.py  cli.py
docpistemic/assessment/: __init__.py  coverage.py  epistemic.py
docpistemic/discovery/: __init__.py  api_discovery.py  cli_discovery.py  config_discovery.py  module_discovery.py
packaging/homebrew/: docpistemic.rb
tests/: test_coverage_analyzer.py  test_module_discovery.py
